Edited wiki page through web user interface.

--- a/wiki/ClassInstructions.wiki
+++ b/wiki/ClassInstructions.wiki
@@ -35,6 +35,7 @@ The shared packages are already built. To build the user packages we'll be using
 {{{
 rosmake wubble
 }}}
+This will build the whole wubble stack.
 
 = Testing =
 
