--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -2,11 +2,10 @@
 
 == Who are you guys? ==
 
-We are a cognitive robotics group at the University of Arizona. Our group is headed by Professors Paul Cohen and Ian Fasel, and consists of graduate students Daniel Hewlett, Anton Regbuns, Jeremy Wright and Ahn Tran, as well as undergraduate Cody Jorgenson.
+We are a cognitive robotics group at the University of Arizona. Our group is headed by Professors Paul Cohen and Ian Fasel, and consists of graduate students Daniel Hewlett, Antons Regbuns, Jeremy Wright and Ahn Tran, as well as undergraduate Cody Jorgenson.
 
 == What's in ua-ros-pkg? ==
 
 ROS packages containing:
   # Software and drivers to support our robot, the Wubble One. This includes configurable drivers for the Dynamixel AX-12 servos, the Videre STOC Camera, and more.
   # A simulated version of our robot, with the goal of creating a ROS interface that is identical to the physical robot.
-
