Edited wiki page through web user interface.

--- a/wiki/ClassInstructions.wiki
+++ b/wiki/ClassInstructions.wiki
@@ -35,7 +35,7 @@ The shared packages are already built. To build the user packages we'll be using
 {{{
 rosmake wubble
 }}}
-This will build the whole wubble stack.
+This will build the whole wubble stack. (If it doesn't work, try closing and reopening the terminal so the ROS commands will be detected by the system)
 
 = Testing =
 
