--- a/wiki/ClassInstructions.wiki
+++ b/wiki/ClassInstructions.wiki
@@ -5,6 +5,29 @@
 
 This page tells you how to set up your account with a functional ROS installation and UA packages. These will only work on the class machines located in GS 930 (the machine names all start with "har").
 
+*NOTE:* On Monday, Jan 25th, the machines in CS 930 we upgraded to ROS 1.0. If you set up your account prior to that date, you will need to follow the un-installation instructions below, and then re-do the installation.
+
+= Un-Installation =
+
+  # Execute the following commands to delete ros-related files:
+{{{
+rm -rf ~/ros
+rm install_ros_user
+rm rosconfig
+rm .ros.bashrc
+}}}
+
+  # You will need to edit your .bashrc file, and remove (what should be) the last two lines. You can do this with:
+{{{
+gedit ~/.bashrc
+}}}
+The lines you are looking for are:
+{{{
+source ~/.ros.bashrc
+export ROBOT=sim
+}}}
+
+
 = Installation =
 
 Easy!
