--- a/wiki/ClassInstructions.wiki
+++ b/wiki/ClassInstructions.wiki
@@ -52,17 +52,6 @@ source .bashrc
 }}}
 This is needed to load environment variables before you run any further ros commands.
 
-= Building =
-
-Take a quick look at [http://www.ros.org/wiki/ROS/Tutorials/NavigatingTheFilesystem this ROS tutorial] to get an overview of packages and how the ROS file system is arranged. There are now two types of ROS packages on the machines you are using: 
-  # Shared packages, which are part of the ROS distribution and come from Willow Garage. These have been previously installed (and compiled) in /opt/ros/installed, which means you can't change them.
-  # User packages, which live in the ros directory inside your home folder (specifically, ~/ros/ua-ros-pkg).
-
-All packages are already built by the install script you executed above. After you make changes, you can rebuild the wubble stack using:
-{{{
-rosmake wubble
-}}}
-
 = Testing =
 
 Here's a simple demo to run to test that you've got everything working. Try running:
@@ -84,3 +73,28 @@ roslaunch pr2_teleop teleop_keyboard.launch
 If all of this worked, you're ready to get started with ROS! Take a look at the [http://www.ros.org/wiki/ROS/StartGuide ROS Quick Start Guide] if you can't wait to explore ROS further.
 
 If something didn't work, please send email to Daniel Hewlett.
+
+= Updating =
+
+The install script has checked out a copy of the ua-ros-pkg Google Code repository into your ~/ros folder. As this code is under active development, you may want to pull down the latest updates from the repository from time to time. Google Code simply hosts an SVN (Subversion) repository, which is simple to update:
+
+  # Navigate to the repository folder
+{{{
+cd ~/ros/ua-ros-pkg
+}}}
+  # Run the update command
+{{{
+svn up
+}}}
+
+
+= Building =
+
+Take a quick look at [http://www.ros.org/wiki/ROS/Tutorials/NavigatingTheFilesystem this ROS tutorial] to get an overview of packages and how the ROS file system is arranged. There are now two types of ROS packages on the machines you are using: 
+  # Shared packages, which are part of the ROS distribution and come from Willow Garage. These have been previously installed (and compiled) in /opt/ros/installed, which means you can't change them.
+  # User packages, which live in the ros directory inside your home folder (specifically, ~/ros/ua-ros-pkg).
+
+All packages are already built by the install script you executed above. After you make changes, you can rebuild the wubble stack using:
+{{{
+rosmake wubble
+}}}
