--- a/wiki/Tips.wiki
+++ b/wiki/Tips.wiki
@@ -6,4 +6,4 @@
 {{{
 sudo gedit /usr/share/gtksourceview-2.0/language-specs/xml.lang{code}
 }}}
-  # Add "`*`.launch" to the list of blob types near the beginning of the XML. That's it!
+  # Add "`*`.launch;`*`.world" to the list of blob types near the beginning of the XML. That's it!
