--- a/wiki/Tips.wiki
+++ b/wiki/Tips.wiki
@@ -2,7 +2,11 @@
 
 =IF SOMETHING DOES NOT WORK=
 
-... on the machines in CS930, *REBOOT* the machine (and/or try a different one), before panicking.
+... on the machines in CS930, *REBOOT* the machine (and/or try a different one), before panicking. This is due to a nasty bug in gazebo.
+
+=When you are done with a program (especially gazebo)=
+
+... hit Control-C in the terminal where you launched the program. You may have to wait a minute or do this multiple times to close the program. You want to see the prompt again before you close the terminal and log out, because of the bug above.
 
 =Syntax highlighting for .launch files (in gedit)=
 
