--- a/wiki/Tips.wiki
+++ b/wiki/Tips.wiki
@@ -12,6 +12,6 @@
 
   # Open the language configuration file as root (It's really just an XML file): 
 {{{
-sudo gedit /usr/share/gtksourceview-2.0/language-specs/xml.lang{code}
+sudo gedit /usr/share/gtksourceview-2.0/language-specs/xml.lang
 }}}
   # Add "`*`.launch;`*`.world" to the list of blob types near the beginning of the XML. That's it!
