--- a/wiki/WubbleRobot.wiki
+++ b/wiki/WubbleRobot.wiki
@@ -6,7 +6,13 @@
 
 This repository provides a number of packages that support the Wubble Robot created by the Arizona Robotics Research Group. Because a number of the components of the Wubble Robot are also used by other research groups, we provide a description of the robot and of relevant software packages. The ua_robots stack contains URDF description files for the Wubble Robot and its components.
 
-= Components =
+=Wubble Robot=
+
+Packages:
+  * wubble_description
+  * wubble_actions
+
+=Components=
 
 ==Videre ERRATIC (Mobile Base)==
 
@@ -17,6 +23,7 @@ http://www.videredesign.com/assets/images/robot_images/robot/era-mobi_sm.png
 Packages:
   * erratic_description
   * ua_erratic_player
+  * wubble_plugins
 
 ==Videre STOC (Stereo Camera)==
 
@@ -27,4 +34,3 @@ Packages:
   * videre_stereo_cam
   * videre_stoc
   * stoc_publisher
-
