--- a/wiki/WubbleRobot.wiki
+++ b/wiki/WubbleRobot.wiki
@@ -1,12 +1,14 @@
 #summary A description of UA's Wubble Robot
 
-<img title="Wubble Robot Photo" width="300" height="400" align="right" src="http://dl.dropbox.com/u/2587300/wubble_robot.jpg" />
-
 =Overview=
 
 This repository provides a number of packages that support the Wubble Robot created by the Arizona Robotics Research Group. Because a number of the components of the Wubble Robot are also used by other research groups, we provide a description of the robot and of relevant software packages. The ua_robots stack contains URDF description files for the Wubble Robot and its components.
 
 =Wubble Robot=
+
+<div style="float:left;"> 
+<img alt="logo" src="http://ua-ros-pkg.googlecode.com/svn/trunk/arrg/wiki/images/wubble1-sim.png" /><img alt="background" src="http://ua-ros-pkg.googlecode.com/svn/trunk/arrg/wiki/images/wubble1-rl.png" /> 
+</div>
 
 Packages:
   * wubble_description
