--- a/wiki/WubbleRobot.wiki
+++ b/wiki/WubbleRobot.wiki
@@ -2,7 +2,7 @@
 
 =Overview=
 
-This repository provides a number of packages that support the Wubble Robot created by the Arizona Robotics Research Group. Because a number of the components of the Wubble Robot are also used by other research groups, we provide a description of the robot and of relevant software packages. The [http://www.ros.org/wiki/ua_robots ua_robots] stack contains URDF description files for the Wubble Robot and its components. This URDF is linked to detailed 3D models of the robot's components, so that all of the robot's sensors and motors can be accurately simulated in Gazebo (seen below) and visualized in rviz.   
+This repository provides a number of packages that support the Wubble Robot created by the Arizona Robotics Research Group. Because a number of the components of the Wubble Robot are also used by other research groups, we provide a description of the robot and of relevant software packages. The [http://www.ros.org/wiki/ua_robots ua_robots] stack contains URDF description files for the Wubble Robot and its components. This URDF is linked to detailed 3D models of the robot's components, so that all of the robot's sensors and motors can be accurately simulated in Gazebo (seen below) and visualized in rviz, with correct transform information for tf.   
 
 =Wubble Robot=
 
