Edited wiki page through web user interface.

--- a/wiki/Stacks.wiki
+++ b/wiki/Stacks.wiki
@@ -5,9 +5,15 @@
 This stack contains ROS drivers for various components of the Wubble Robot, specifically:
   * Drivers for the Dynamixel AX-12 servos ([http://www.ros.org/wiki/ax12_driver_core ax12_driver_core]). These servos are used by the robot's !SmartArm, tilt laser, and head pan/tilt.
   * A Python interface to Phidgets pressure sensors and RFID sensors  ([http://www.ros.org/wiki/phidgets_py_api phidgets_py_api], [http://www.ros.org/wiki/phidgets_ros phidgets_ros]). 
-  * Two interfaces to the Videre STOC camera: The first ([http://www.ros.org/wiki/videre_stereo_cam videre_stereo_cam]) uses standard FireWire libraries to get the left and right images from the camera. The second ([http://www.ros.org/wiki/videre_stoc videre_stoc]) relies on Videre's proprietary SVS software packages to pull the left image and disparity image from the STOC.
+  * Two interfaces to the Videre STOC camera: The first ([http://www.ros.org/wiki/videre_stereo_cam videre_stereo_cam]) uses standard !FireWire libraries to get the left and right images from the camera. The second ([http://www.ros.org/wiki/videre_stoc videre_stoc]) relies on Videre's proprietary SVS software packages to pull the left image and disparity image from the STOC.
 
 ===ua_controllers===
+
+This package contains controllers for the Wubble Robot, which generally depend on ua_drivers for interfacing with the hardware. Thus, packages in this stack provide a higher level of abstraction for robot subsystems than ua_drivers. 
+  * Controller 
+  * Actions interfaces for all of the above controllers ([http://www.ros.org/wiki/wubble_actions wubble_actions]).
+  * Message types common to all controllers ([http://www.ros.org/wiki/ua_controller_msgs ua_controller_msgs]).
+  * A control system for a simple Bioloid robot used in some Wizard-of-Oz experiments at UA ([http://www.ros.org/wiki/ccs ccs]).
 
 ===ua_robots===
 
