Edited wiki page through web user interface.

--- a/wiki/Stacks.wiki
+++ b/wiki/Stacks.wiki
@@ -18,6 +18,9 @@ This package contains controllers for the Wubble Robot, which generally depend o
 
 ===ua_robots===
 
+This stack contains URDF description files, 3D models, and configuration parameters for the Wubble Robot. The Wubble Robot is modeled quite accurately in simulation
+  * Description files for the 
+
 ===ua_vision===
 
 ===ua_cognition===
@@ -28,3 +31,5 @@ Contains packages that provide
 
 
 ===wubble_world===
+
+This stack contains world files for the Gazebo simulator, which will ultimately act as a continuation of the [http://www.wubbleworld.com Wubble World] project.
