--- a/wiki/Stacks.wiki
+++ b/wiki/Stacks.wiki
@@ -25,9 +25,11 @@ This stack contains URDF description files, 3D models, and configuration paramet
 
 ===ua_cognition===
 
-===ua_apps===
-Contains packages that provide
+This stack will contain the cognitive architecture for the Wubble Robot. Currently, it contains a ROS wrapper for the GBBopen blackboard system ([http://www.ros.org/wiki/gbbopen gbbopen]).
 
+===ua_apps===
+
+Contains packages that provide
 
 ===wubble_world===
 
