Edited wiki page through web user interface.

--- a/wiki/Stacks.wiki
+++ b/wiki/Stacks.wiki
@@ -26,14 +26,14 @@ Contains packages related to vision on UA robots, including saliency tracking ba
 
   * A ROS wrapper for Nick's Machine Perception Toolkit ([http://www.ros.org/wiki/nmpt nmpt]), a vision library providing algorithms for computing salient parts of an image. This information is used for saliency-based tracking ([http://www.ros.org/wiki/saliency_tracking saliency_tracking]). 
 
-
 ===ua_cognition===
 
 This stack will contain the cognitive architecture for the Wubble Robot. Currently, it contains a ROS wrapper for the GBBopen blackboard system ([http://www.ros.org/wiki/gbbopen gbbopen]).
 
 ===ua_apps===
 
-Contains packages that provide
+  * Wubble Robot Gmapping application ([http://www.ros.org/wiki/wubble_mapping wubble_mapping]).
+  * Wubble Robot teleoperation ([http://www.ros.org/wiki/wubble_teleop wubble_teleop]).
 
 ===wubble_world===
 
